# metering-station-designer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  build_windows.bat  installer.iss  opencode.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
.opencode/agents/: backend-infra.md  inspection-compliance.md  meter-sizing.md  scoring-engine.md  test-backend.md  test-inspection.md  test-materials.md  test-release.md  test-scoring.md  test-sizing.md  ui-frontend.md
knowledge/: asme_b165_ratings.json  asme_b313_stress.json  gas_components.json  inspection_conditioners.json  inspection_coriolis.json  inspection_orifice.json  inspection_piping.json  inspection_turbine.json  inspection_usm.json  inspection_vcone.json  inspection_venturi.json  meter_scoring.json  meter_specs.json
metering_designer/: __init__.py
metering_designer/auxiliaries/: erosional_velocity.py  pressure_loss.py  straight_pipe.py
metering_designer/conditioners/: scoring.py
metering_designer/core/: backends.py  i18n.py  scoring_engine.py  validation.py  weights.py
metering_designer/fluids/: aga8.py  gas.py
metering_designer/inspection/: builder.py  compliance_report.py  models.py  tolerance_engine.py  uncertainty_impact.py
metering_designer/meters/: base.py  coriolis.py  orifice.py  pd_meter.py  specs.py  (+5 more)
streamlit_app/: app.py  config.py
tests/: conftest.py  test_backend_fallback.py  test_expanded.py  test_inspection_deep.py  test_materials_extended.py  test_phase3.py  test_scoring.py  test_scoring_extended.py  test_sizing_deep.py
(+21 files in other folders)
